--- a/Contacto.html
+++ b/Contacto.html
@@ -174,7 +174,7 @@
                 <ul>
                     
                     <li><i class="fas fa-phone"></i> (111) 111 111 111</li>
-                    <li><i class="fas fa-envelope-open-text"></i> correoempresa@gmail.com</li>
+                    <li><i class="fas fa-envelope-open-text"></i> arreglosciberseguridad@gmail.com</li>
                 </ul>
                 <p>Empresa de Ciberseguridad</p>
             </div>
