--- a/Contacto.html
+++ b/Contacto.html
@@ -163,7 +163,7 @@
                         <textarea name="message" rows="3"></textarea>
                     </p>
                     <p class="block">
-			    <form action="https://formsubmit.co/hugosanchezzaya11@gmail.com" method="POST">
+			    <form action="https://formsubmit.co/arreglosciberseguridad.com" method="POST">
                         <button>
                             Enviar
                         </button>
