--- a/Contacto.html
+++ b/Contacto.html
@@ -145,7 +145,7 @@
                 <h3>Contactanos</h3>
                 <form action="">
                     <p>
-						<form action="https://formsubmit.co/hugosanchezzaya11@gmail.com" method="POST"></form>
+						<form action="https://formsubmit.co/arreglosciberseguridad@gmail.com" method="POST"></form>
                         <label>Nombre</label>
                         <input type="text" name="fullname">
                     </p>
@@ -163,7 +163,7 @@
                         <textarea name="message" rows="3"></textarea>
                     </p>
                     <p class="block">
-			    <form action="https://formsubmit.co/arreglosciberseguridad.com" method="POST">
+			    
                         <button>
                             Enviar
                         </button>
