--- a/index.html
+++ b/index.html
@@ -241,6 +241,13 @@
             </p>
             <p>Precio: 21,08$/20€</p>
             <a href="Pagina de pago.html">Comprar</a>
+            <a href="Pagina de pago.html">Comprar</a>
+          <div class="package">
+            <h3>Antivirus</h3>
+            <p>El contenido de este paquete incluye 1 antivirus con tráfico de red, brindando seguridad en el dispositivo al bloquear amenazas y sitios web sospechosos. Además, proporciona mayor seguridad al navegar por internet y un servicio técnico disponible 24/7.</p>
+            </p>
+            <p>Precio: 36,88$/35€</p>
+            <a href="Pagina de pago.html">Comprar</a>
     </div>
   </section>
 
