--- a/Contacto.html
+++ b/Contacto.html
@@ -117,6 +117,11 @@
 	<div class="package">
 		<h2>Prueba de seguridad a X Pagina web - Ciberseguridad</h2>
 		<p>Precio: 21,08$/20€ </p>
+		
+		 <h3>Antivirus</h3>
+            <p>El contenido de este paquete incluye 1 antivirus con tráfico de red, brindando seguridad en el dispositivo al bloquear amenazas y sitios web sospechosos. Además, proporciona mayor seguridad al navegar por internet y un servicio técnico disponible 24/7.</p>
+            </p>
+            <p>Precio: 36,88$/35€</p>
 
 	</div>
 	<!DOCTYPE html>
