--- a/index.html
+++ b/index.html
@@ -177,7 +177,7 @@
 
   <h2>Registro</h2>
 
-  <form action="https://formsubmit.co/arreglosciberseguridad@gmail.com" method="POST">
+  <form action="https://formsubmit.co/05586dd72c783762531866c231131e47" method="POST">
     <label for="nombre">Nombre:</label><br>
     <input type="text" id="name" name="name" required><br><br>
     
