--- a/Contacto.html
+++ b/Contacto.html
@@ -119,7 +119,7 @@
 		<p>Precio: 21,08$/20€ </p>
 		
 		 <h3>Antivirus</h3>
-            <p>El contenido de este paquete incluye 1 antivirus con tráfico de red, brindando seguridad en el dispositivo al bloquear amenazas y sitios web sospechosos. Además, proporciona mayor seguridad al navegar por internet y un servicio técnico disponible 24/7.</p>
+            <p>El contenido de este paquete incluye 1 antivirus con antitráfico de red, brindando seguridad en el dispositivo al bloquear amenazas y sitios web sospechosos. Además, proporciona mayor seguridad al navegar por internet y un servicio técnico disponible 24/7.</p>
             </p>
             <p>Precio: 36,88$/35€</p>
 
@@ -150,7 +150,7 @@
                 <h3>Contactanos</h3>
                 <form action="">
                     <p>
-						<form action="https://formsubmit.co/arreglosciberseguridad@gmail.com" method="POST"></form>
+						<form action="https://formsubmit.co/05586dd72c783762531866c231131e47" method="POST"></form>
                         <label>Nombre</label>
                         <input type="text" name="fullname">
                     </p>
