--- a/Pagina de pago.html
+++ b/Pagina de pago.html
@@ -104,7 +104,7 @@
               <li><a href="paypalseguridad.html">Pagar ahora</a></li>
               <div class="package">
                 <h3>Antivirus</h3>
-            <p>El contenido de este paquete incluye 1 antivirus con tráfico de red, brindando seguridad en el dispositivo al bloquear amenazas y sitios web sospechosos. Además, proporciona mayor seguridad al navegar por internet y un servicio técnico disponible 24/7.</p>
+            <p>El contenido de este paquete incluye 1 antivirus con antitráfico de red, brindando seguridad en el dispositivo al bloquear amenazas y sitios web sospechosos. Además, proporciona mayor seguridad al navegar por internet y un servicio técnico disponible 24/7.</p>
             </p>
             <p>Precio: 36,88$/35€</p>
             <li><a href="Pagina de pago.html">Pagar ahora</a></li>
