Update Pagina de pago.html

--- a/Pagina de pago.html
+++ b/Pagina de pago.html
@@ -107,7 +107,7 @@
             <p>El contenido de este paquete incluye 1 antivirus con antitráfico de red, brindando seguridad en el dispositivo al bloquear amenazas y sitios web sospechosos. Además, proporciona mayor seguridad al navegar por internet y un servicio técnico disponible 24/7.</p>
             </p>
             <p>Precio: 36,88$/35€</p>
-            <li><a href="Pagina de pago.html">Pagar ahora</a></li>
+            <li><a href="paypalvirus.html">Pagar ahora</a></li>
     </div>
       </div>
     
