--- a/index.html
+++ b/index.html
@@ -270,4 +270,4 @@
 </body>
 </html>
 
-ArreglosyCiberseguridad <ArreglosyCiberseguridad class="com"></ArreglosyCiberseguridad>
+<marquee></marquee>ArreglosyCiberseguridad <ArreglosyCiberseguridad class="com"></ArreglosyCiberseguridad></div>marquee>
