--- a/index.html
+++ b/index.html
@@ -270,4 +270,4 @@
 </body>
 </html>
 
-<marquee></marquee>ArreglosyCiberseguridad <ArreglosyCiberseguridad class="com"></ArreglosyCiberseguridad></div>marquee>
+<marquee>ArreglosyCiberseguridad <ArreglosyCiberseguridad class="com"></ArreglosyCiberseguridad></div></div>marquee>
