--- a/Contacto.html
+++ b/Contacto.html
@@ -117,10 +117,10 @@
 	<div class="package">
 		<h2>Prueba de seguridad a X Pagina web - Ciberseguridad</h2>
 		<p>Precio: 21,08$/20€ </p>
-		
+		</div>
 		 <h3>Antivirus</h3>
             <p>Precio: 36,88$/35€</p>
-
+		</div>
 	</div>
 	<!DOCTYPE html>
 <html lang="en">
