--- a/Contacto.html
+++ b/Contacto.html
@@ -121,11 +121,12 @@
 		 <h3>Antivirus</h3>
             <p>Precio: 36,88$/35€</p>
 		</div>
- <h3>Antivirus</h3>
+      <div class="package">
+            <h3>Antivirus</h3>
             <p>El contenido de este paquete incluye 1 antivirus con antitráfico de red, brindando seguridad en el dispositivo al bloquear amenazas y sitios web sospechosos. Además, proporciona mayor seguridad al navegar por internet y un servicio técnico disponible 24/7.</p>
             </p>
             <p>Precio: 36,88$/35€</p>
-	</div>
+    </div>
 	<!DOCTYPE html>
 <html lang="en">
 <head>
