--- a/Contacto.html
+++ b/Contacto.html
@@ -121,12 +121,11 @@
 		 <h3>Antivirus</h3>
             <p>Precio: 36,88$/35€</p>
 		</div>
-      <div class="package">
-            <h3>Antivirus</h3>
-            <p>El contenido de este paquete incluye 1 antivirus con antitráfico de red, brindando seguridad en el dispositivo al bloquear amenazas y sitios web sospechosos. Además, proporciona mayor seguridad al navegar por internet y un servicio técnico disponible 24/7.</p>
-            </p>
-            <p>Precio: 36,88$/35€</p>
     </div>
+	<div class="package">
+		<h2>Antivirus - Ciberseguridad</h2>
+		<p>Precio: 105,41$/100€ </p>
+	</div>
 	<!DOCTYPE html>
 <html lang="en">
 <head>
