--- a/index.html
+++ b/index.html
@@ -178,10 +178,10 @@
         <p> Escribe aquí el mensaje que quieres presentar si es necesario.</p>
 
    <form action="enviar.php" method="post">
-                        <input type="text" name="name" id="name" class="name" placeholder="NOMBRE">
-                        <input type="text" name="mail" id="mail" class="email" placeholder="CORREO">
-                        <input type="text" name="phone" id="subject" class="subject" placeholder="TELÉFONO">
-                        <textarea name="message" class="message" placeholder="MENSAJE ... " id="message"></textarea>
+                        <input type="text" name="name" id="name" class="name" placeholder="name">
+                        <input type="text" name="mail" id="mail" class="email" placeholder="mail">
+                        <input type="text" name="phone" id="subject" class="subject" placeholder="phone">
+                        <textarea name="message" class="message" placeholder="message " id="message"></textarea>
                         <div class="clear"></div>
                             <div class="col-md-8"> 
                                 <button type="submit" class="btn btn-primary">ENVIAR </button>
