--- a/Contacto.html
+++ b/Contacto.html
@@ -2,7 +2,7 @@
 <style>
 	body {
 		font-family: Arial, sans-serif;
-		background-color: #f2f2f2;
+		background-color: #f4f4f4;
 		margin: 0;
 		padding: 0;
 	}
@@ -17,7 +17,7 @@
 	}
 	.package {
 		margin-bottom: 20px;
-		background-color: #fff;
+		background-color: #31814505;
 		padding: 20px;
 		border-radius:5px;
 		box-shadow: 0 2px 5px rgba(0, 0, 0, 0.1);
@@ -28,7 +28,7 @@
 	}
 	.package p {
 		margin: 10px 0;
-		color: #777;
+		color: #9b9a9a00;
 	}
 	.contact-section {
 		background-color: #fff;
