--- a/index.html
+++ b/index.html
@@ -175,7 +175,7 @@
 <body>
   <div class="container">
     <header>
-      <h1>Sistema de Inicio de Sesión y Registro</h1>
+      <h1>Inicio de Sesión y Registro</h1>
     </header>
     <div class="tabs">
       <div class="tab" id="login-tab">Iniciar Sesión</div>
