--- a/index.html
+++ b/index.html
@@ -1,273 +1,78 @@
 <!DOCTYPE html>
-<html>
-<head>
-  <title>Arreglos y Ciberseguridad</title>
-  <link rel="stylesheet" type="text/css" href="style.css">
-</head>
-<body>
-  <header>
-    <h1>Arreglos y Ciberseguridad</h1>
-    <h1>Avanzado en Ciberseguridad</h1>
-    <nav>
-      <ul>
-        <!DOCTYPE html>
-<html>
-<head>
-  <style>
-    .boton-azul-claro {
-      display: inline-block;
-      padding: 10px 20px;
-      font-size: 18px;
-      font-weight: bold;
-      text-align: center;
-      text-decoration: none;
-      border: none;
-      border-radius: 5px;
-      color: #fff;
-      background-color: #66a3ff;
-      box-shadow: 0px 2px 5px rgba(0, 0, 0, 0.2);
-      transition: background-color 0.3s ease;
-    }
-    .boton-azul-claro:hover {
-      background-color: #4d94ff;
-    }
-  </style>
-</head>
-<body>
-  <a class="boton-azul-claro" href="Acerca De.html">Acerca de</a>
-</body>
-</html>
-<!DOCTYPE html>
-<html>
-<head>
-  <style>
-    .boton-azul-claro {
-      display: inline-block;
-      padding: 10px 20px;
-      font-size: 18px;
-      font-weight: bold;
-      text-align: center;
-      text-decoration: none;
-      border: none;
-      border-radius: 5px;
-      color: #fff;
-      background-color: #66a3ff;
-      box-shadow: 0px 2px 5px rgba(0, 0, 0, 0.2);
-      transition: background-color 0.3s ease;
-    }
-    .boton-azul-claro:hover {
-      background-color: #4d94ff;
-    }
-  </style>
-</head>
-<body>
-  <a class="boton-azul-claro" href="Contacto.html">Atencion al cliente</a>
-</body>
-</html>
-<!DOCTYPE html>
-<html>
-<head>
-  <style>
-    .boton-azul-claro {
-      display: inline-block;
-      padding: 10px 20px;
-      font-size: 18px;
-      font-weight: bold;
-      text-align: center;
-      text-decoration: none;
-      border: none;
-      border-radius: 5px;
-      color: #fff;
-      background-color: #66a3ff;
-      box-shadow: 0px 2px 5px rgba(0, 0, 0, 0.2);
-      transition: background-color 0.3s ease;
-    }
-    .boton-azul-claro:hover {
-      background-color: #4d94ff;
-    }
-  </style>
-</head>
-<body>
-  <a class="boton-azul-claro" href="consejos.html">Consejos Sobre Ciberseguridad</a>
-</body>
-</html>
-<!DOCTYPE html>
-<html>
-<head>
-  <style>
-    .boton-azul-claro {
-      display: inline-block;
-      padding: 10px 20px;
-      font-size: 18px;
-      font-weight: bold;
-      text-align: center;
-      text-decoration: none;
-      border: none;
-      border-radius: 5px;
-      color: #fff;
-      background-color: #66a3ff;
-      box-shadow: 0px 2px 5px rgba(0, 0, 0, 0.2);
-      transition: background-color 0.3s ease;
-    }
-    .boton-azul-claro:hover {
-      background-color: #4d94ff;
-    }
-  </style>
-</head>
-<body>
-  <a class="boton-azul-claro" href="Pagina de pago.html">Pagina de Pago</a>
-</body>
-</html>
-
-      </ul>
-    </nav>
-  </header>
-
-  <style>
-    body {
-      font-family: Arial, sans-serif;
-      background-color: #f4f4f4;
-    }
-
-    .container {
-      max-width: 500px;
-      margin: auto;
-      padding: 20px;
-      background-color: #ffffff;
-      border: 1px solid #dddddd;
-    }
-
-    h2 {
-      text-align: center;
-    }
-
-    label {
-      display: block;
-      margin-bottom: 10px;
-    }
-
-    input[type="text"],
-    input[type="password"] {
-      width: 100%;
-      padding: 10px;
-      margin-bottom: 15px;
-    }
-
-    input[type="submit"] {
-      background-color: #31814505;
-      color: #9b9a9a00;
-      padding: 10px 20px;
-      border: none;
-      cursor: pointer;
-    }
-
-    .center {
-      text-align: center;
-    }
-  </style>
-
-  <!DOCTYPE html>
-<html>
-<head>
-  <title>Iniciar Sesión y Registro</title>
-  <link rel="stylesheet" type="text/css" href="style.css">
-</head>
-<body>
-  <div class="container">
-    <header>
-      <h1>Inicio de Sesión y Registro</h1>
-    </header>
-    <div class="tabs">
-      <div class="tab" id="login-tab">Iniciar Sesión</div>
-      <div class="tab" id="register-tab">Registro</div>
-    </div>
-    <div class="content">
-      <div class="login-form">
-        <!-- Formulario de inicio de sesión -->
+<html lang="en">
+  <head>
+    <meta charset="UTF-8" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <script
+      src="https://kit.fontawesome.com/869dc8f5ef.js"
+      crossorigin="anonymous"
+    ></script>
+    <link rel="stylesheet" href="style.css" />
+    <title>login CSS</title>
+  </head>
+  <body>
+    <div class="container" id="container">
+      <div class="form-container sign-up-container">
+        <form action="#">
+          <h1>Crea tu Cuenta</h1>
+          <div class="social-container">
+            <a href="https://www.facebook.com/?locale=es_ES" class="social>">
+              <i class="fab fa-facebook-f"></i>
+            </a>
+            <a href="https://accounts.google.com/AccountChooser/signinchooser?service=mail&continue=https%3A%2F%2Fmail.google.com%2Fmail%2F&flowName=GlifWebSignIn&flowEntry=AccountChooser&ec=asw-gmail-globalnav-signin&theme=glif" class="social>">
+              <i class="fab fa-google" id="red"></i>
+            </a>
+            <a href="https://es.linkedin.com" class="social>">
+              <i class="fab fa-linkedin-in"></i>
+            </a>
+          </div>
+          <span>o usa tu email como registro</span>
+          <input type="text" placeholder="Name" required><br>
+          <input type="email" placeholder="Email" required><br>
+          <input type="password" placeholder="Password" required><br>
+          <button  href="index.html" id="lila">Registrar</button>
+        </form>
       </div>
-      <div class="register-form">
-        <!-- Formulario de registro -->
+      <div class="form-container sign-in-container">
+        <form action="paginafinal.html">
+          <h1>Iniciar Sesión</h1>
+          <div class="social-container">
+            <a href="https://www.facebook.com/?locale=es_ES" class="social">
+              <i class="fab fa-facebook-f"></i>
+            </a>
+            <a href="https://accounts.google.com/AccountChooser/signinchooser?service=mail&continue=https%3A%2F%2Fmail.google.com%2Fmail%2F&flowName=GlifWebSignIn&flowEntry=AccountChooser&ec=asw-gmail-globalnav-signin&theme=glif" class="social>">
+              <i class="fab fa-google" id="red"></i>
+            </a>
+            <a href="https://es.linkedin.com" class="social">
+              <i class="fab fa-linkedin-in"></i>
+            </a>
+          </div>
+          <span>o usa tu email</span>
+          <input type="email" placeholder="Email"  required><br> 
+          <input type="password" placeholder="Password" required><br>
+          <form action="">
+          <a href="recuperarcontraseña.html">Olvidaste tu contraseña?</a>
+          <button  href="paginafinal.html" id="ghost">Iniciar Sesión</button>
+        </form>
+      </div>
+      <div class="overlay-container">
+        <div class="overlay">
+          <div class="overlay-panel overlay-left">
+            <h1>¡Bienvenido!</h1>
+            <p>
+              Inicia sesión con tu cuenta
+            </p>
+            <button class="ghost" id="signIn">Inicia sesión</button>
+          </div>
+          <div class="overlay-panel overlay-right">
+            <h1>¡Hola!</h1>
+            <p>Crear tu cuenta</p>
+            <button class="ghost" id="signUp">Registrar</button>
+          </div>
+        </div>
       </div>
     </div>
-  </div>
-</body>
+
+    <script src="app.js"></script>
+  </body>
 </html>
-	
-
-  <section id="packages">
-    <h2>Paquetes de compras</h2>
-    <div class="package">
-      <h3>1 Virus</h3>
-      <p>El contenido de este artículo es un virus destinado a uso personal.Para android Solo funcionará si lo abres. Además, el paquete incluye un servicio técnico y el producto te llegará al correo electrónico con el que te hayas registrado.
-      </p>
-      <p>Precio: 30,47$/29€</p>
-      <a href="Pagina de pago.html">Comprar</a>
-    </div>
-    <div class="package">
-      <h3>2 Virus</h3>
-      <p>El contenido de este artículo son 2 virus destinado a uso personal.Para android o windows. Solo funcionará si lo abres. Además, el paquete incluye un servicio técnico 24/7 y el producto te llegará al correo electrónico con el que te hayas registrado.Envia un correo a la direccion que se le facilita con las especificaciones del producto.</p>
-      <p>Precio: 52,54$/50€</p>
-       <a href="Pagina de pago.html">Comprar</a>
-    </div>
-    <div class="package">
-      <h3>3 Virus</h3>
-      <p>El contenido de este artículo son 3 virus destinado a uso personal.Para android, windows o linux. Solo funcionará si lo abres. Además, el paquete incluye un servicio técnico 24/7 y el producto te llegará al correo electrónico con el que te hayas registrado.Envia un correo a la direccion que se le facilita con las especificaciones del producto.</p>
-      <p>Precio: 104,03$/99€</p>
-      <a href="Pagina de pago.html">Comprar</a>
-    </div>
-    <div class="package">
-      <h3>1 Pagina web Personalizada</h3>
-      <p>El contenido de este paquete es una página web personalizada al detalle, que cumple con todas las especificaciones del cliente. La página web que se entrega al cliente está clasificada en la categoría de gama media, y además garantizamos seguridad en la página web del cliente.Tienes un servicio tecnico 24/7.</p>
-      </p>
-      <p>Precio: 47,43$/45€</p>
-      <a href="Pagina de pago.html">Comprar</a>
-      <div class="package">
-        <h3>2 Paginas webs Personalizadas</h3>
-        <p>El contenido de este paquete son 2 páginas webs personalizadas al detalle, que cumple con todas las especificaciones del cliente. La página web que se entrega al cliente está clasificada en la categoría de gama media, y además garantizamos seguridad en la página web del cliente.Tienes un servicio tecnico 24/7.</p>
-        </p>
-        <p>Precio: 79,05$/75€</p>
-        <a href="Pagina de pago.html">Comprar</a>
-        <div class="package">
-          <h3>3 Paginas webs Personalizadas</h3>
-          <p>El contenido de este paquete son 3 páginas webs personalizadas al detalle, que cumple con todas las especificaciones del cliente. La página web que se entrega al cliente está clasificada en la categoría de gama media, y además garantizamos seguridad en la página web del cliente.Tienes un servicio tecnico 24/7.</p>
-          </p>
-          <p>Precio: 105,41$/100€</p>
-          <a href="Pagina de pago.html">Comprar</a>
-          <div class="package">
-            <h3>Prueba de seguridad a X pagina web</h3>
-            <p>El contenido de este paquete pone a prueba la seguridad de cierta página web utilizando herramientas legales y sin hacer ningún tipo de ataque a la página tienes un servicio tecnico 24/7</p>
-            </p>
-            <p>Precio: 21,08$/20€</p>
-            <a href="Pagina de pago.html">Comprar</a>
-          <div class="package">
-            <h3>Antivirus</h3>
-            <p>El contenido de este paquete incluye 1 antivirus con antitráfico de red, brindando seguridad en el dispositivo al bloquear amenazas y sitios web sospechosos. Además, proporciona mayor seguridad al navegar por internet y un servicio técnico disponible 24/7.</p>
-            </p>
-            <p>Precio: 36,88$/35€</p>
-            <a href="Pagina de pago.html">Comprar</a>
-    </div>
-  </section>
-
-  <footer>
-    <p>Derechos de autor Hugo Sánchez &copy; 2022 Arreglos y Ciberseguridad. Todos los derechos reservados.</p>
-  </footer>
-</body>
-</html>
-
-          
-
-</script>
-<script src="/bundles/jquery?v=unfc-u3TLGpORZGkmQkQ77TpgXxxHnNqIronCpWbbsU1"></script>
-<script src="/App/textoslegales.js"></script>
-<script src="/App/acceso.js"></script>
-</body>
-</html>
-
-</script>
-<script src="/bundles/jquery?v=unfc-u3TLGpORZGkmQkQ77TpgXxxHnNqIronCpWbbsU1"></script>
-<script src="/App/textoslegales.js"></script>
-<script src="/App/acceso.js"></script>
-</body>
-</html>
-
-ArreglosyCiberseguridad <ArreglosyCiberseguridad class="com"></ArreglosyCiberseguridad></div></div>
