--- a/index.html
+++ b/index.html
@@ -52,7 +52,7 @@
           <input type="password" placeholder="Password" required><br>
           <form action="">
           <a href="recuperarcontraseña.html">Olvidaste tu contraseña?</a>
-          <button  href="paginafinal.html" id="ghost">Iniciar Sesión</button>
+          <button  href="inicio.html" id="ghost">Iniciar Sesión</button>
         </form>
       </div>
       <div class="overlay-container">
