--- a/consejos.html
+++ b/consejos.html
@@ -133,7 +133,7 @@
                       </style>
                     </head>
                     <body>
-                      <a class="boton-azul-claro" href="index.html">Inicio</a>
+                      <a class="boton-azul-claro" href="inicio.html">Inicio</a>
                     </body>
                     </html>
                     
