--- a/inicio.html
+++ b/inicio.html
@@ -2,7 +2,7 @@
 <html>
 <head>
   <title>Arreglos y Ciberseguridad</title>
-  <link rel="stylesheet" type="text/css" href="style2.css">
+  <link rel="stylesheet" type="text/css" href="style.css">
 </head>
 <body>
   <header>
