--- a/index.html
+++ b/index.html
@@ -51,7 +51,7 @@
           <input type="email" placeholder="Email"  required><br> 
           <input type="password" placeholder="Password" required><br>
           <form action="">
-          <a href="recuperarcontraseña.html">Olvidaste tu contraseña?</a>
+          <a href="index.html">Olvidaste tu contraseña?</a>
           <button  href="inicio.html" id="ghost">Iniciar Sesión</button>
         </form>
       </div>
