--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
       crossorigin="anonymous"
     ></script>
     <link rel="stylesheet" href="style2.css" />
-    <title>login CSS</title>
+    <title>Inicio de Sesión y Registro</title>
   </head>
   <body>
     <div class="container" id="container">
@@ -34,7 +34,7 @@
         </form>
       </div>
       <div class="form-container sign-in-container">
-        <form action="paginafinal.html">
+        <form action="inicio.html">
           <h1>Iniciar Sesión</h1>
           <div class="social-container">
             <a href="https://www.facebook.com/?locale=es_ES" class="social">
