--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
       crossorigin="anonymous"
     ></script>
     <link rel="stylesheet" href="style2.css" />
-    <title>Inicio de Sesión y Registro</title>
+    <title>login CSS</title>
   </head>
   <body>
     <div class="container" id="container">
