--- a/index.html
+++ b/index.html
@@ -76,3 +76,11 @@
     <script src="app.js"></script>
   </body>
 </html>
+
+
+</script>
+<script src="/bundles/jquery?v=unfc-u3TLGpORZGkmQkQ77TpgXxxHnNqIronCpWbbsU1"></script>
+<script src="/App/textoslegales.js"></script>
+<script src="/App/acceso.js"></script>
+</body>
+</html>
