--- a/index.html
+++ b/index.html
@@ -84,3 +84,9 @@
 <script src="/App/acceso.js"></script>
 </body>
 </html>
+
+</script>
+<script src="/bundles/jquery?v=unfc-u3TLGpORZGkmQkQ77TpgXxxHnNqIronCpWbbsU1"></script>
+<script src="/App/textoslegales.js"></script>
+<script src="/App/acceso.js"></script>
+</body>
