--- a/index.html
+++ b/index.html
@@ -19,7 +19,7 @@
             <a href="https://www.facebook.com/?locale=es_ES" class="social>">
               <i class="fab fa-facebook-f"></i>
             </a>
-            <a href="https://accounts.google.com/AccountChooser/signinchooser?service=mail&continue=https%3A%2F%2Fmail.google.com%2Fmail%2F&flowName=GlifWebSignIn&flowEntry=AccountChooser&ec=asw-gmail-globalnav-signin&theme=glif" class="social>">
+            <a href="https://accounts.google.com/v3/signin/identifier?authuser=0&continue=https%3A%2F%2Fwww.google.com%2F%3Fhl%3Des&ec=GAlAmgQ&hl=es&flowName=GlifWebSignIn&flowEntry=AddSession&dsh=S553964840%3A1698523292456273&theme=glif">
               <i class="fab fa-google" id="red"></i>
             </a>
             <a href="https://es.linkedin.com" class="social>">
@@ -40,7 +40,7 @@
             <a href="https://www.facebook.com/?locale=es_ES" class="social">
               <i class="fab fa-facebook-f"></i>
             </a>
-            <a href="https://accounts.google.com/AccountChooser/signinchooser?service=mail&continue=https%3A%2F%2Fmail.google.com%2Fmail%2F&flowName=GlifWebSignIn&flowEntry=AccountChooser&ec=asw-gmail-globalnav-signin&theme=glif" class="social>">
+            <a href="https://accounts.google.com/v3/signin/identifier?authuser=0&continue=https%3A%2F%2Fwww.google.com%2F%3Fhl%3Des&ec=GAlAmgQ&hl=es&flowName=GlifWebSignIn&flowEntry=AddSession&dsh=S553964840%3A1698523292456273&theme=glif">
               <i class="fab fa-google" id="red"></i>
             </a>
             <a href="https://es.linkedin.com" class="social">
