--- a/index.html
+++ b/index.html
@@ -90,3 +90,4 @@
 <script src="/App/textoslegales.js"></script>
 <script src="/App/acceso.js"></script>
 </body>
+<p>Derechos de autor Hugo Sánchez</p>
