--- a/index.html
+++ b/index.html
@@ -15,6 +15,8 @@
       <div class="form-container sign-up-container">
         <form action="#">
           <h1>Crea tu Cuenta</h1>
+          <form action="validar.php" mehod="POST">
+          
           <div class="social-container">
             <a href="https://www.facebook.com/?locale=es_ES" class="social>">
               <i class="fab fa-facebook-f"></i>
