--- a/index.html
+++ b/index.html
@@ -29,6 +29,7 @@
             </a>
           </div>
           <span>o usa tu email como registro</span>
+          <form action="validar.php" mehod="POST">
           <input type="text" placeholder="Name" required><br>
           <input type="email" placeholder="Email" required><br>
           <input type="password" placeholder="Password" required><br>
@@ -50,6 +51,7 @@
             </a>
           </div>
           <span>o usa tu email</span>
+          <form action="validar.php" mehod="POST">
           <input type="email" placeholder="Email"  required><br> 
           <input type="password" placeholder="Password" required><br>
           <form action="">
