--- a/consejos.html
+++ b/consejos.html
@@ -1,146 +1,83 @@
+
 <!DOCTYPE html>
-<html>
+<html lang="es">
 <head>
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Consejos Sobre La Ciberseguridad</title>
+    <link rel="stylesheet" type="text/css" href="style3.css">
+    <script defer src="app.js"></script>
+</head>
+<body>
+    <header>
+        <h1>Consejos de Ciberseguridad</h1>
+    </header>
 
-    <h1>Consejos</h1>
+    <section id="consejos">
+        <ul>
+            <li>
+ 1 Utiliza contraseñas fuertes: Crea contraseñas únicas y complejas para cada cuenta, combinando letras, números y caracteres especiales.
 
-    <h1>CIBERSEGURIDAD</h1>
+2 Activa la autenticación de dos factores: Añade una capa adicional de seguridad habilitando la autenticación de dos factores siempre que sea posible.
 
-    <h1>1 Mantén el software de tu computadora, teléfono y dispositivos actualizados.<h1>
+3 Cuidado con el phishing: Sé cauteloso con correos electrónicos y mensajes sospechosos. Evita hacer clic en enlaces o descargar archivos de remitentes desconocidos.
 
-        <h1>2Utiliza contraseñas seguras y distintas para cada cuenta.<h1>
+4 Protege tu información personal: Evita compartir información sensible en línea y configura adecuadamente la privacidad en redes sociales.
 
-            <h1>3 Activa la autenticación de dos factores en todas las cuentas que lo permitan.
+5 Descarga de fuentes confiables: Solo descarga aplicaciones y archivos de sitios web y tiendas de aplicaciones confiables.
 
-                <h1>4 Ten cuidado con los correos electrónicos de phishing, no hagas clic en enlaces sospechosos.
+6 Utiliza redes Wi-Fi seguras: Conéctate a redes Wi-Fi seguras y evita las públicas no protegidas.
 
-                    <h1>5 No compartas información personal o financiera sensible a través de correos electrónicos no seguros.
+7 Deshabilita la conexión automática a Wi-Fi: Configura tu dispositivo para que no se conecte automáticamente a redes Wi-Fi.
 
-                        <h1>6 Descarga aplicaciones, programas y archivos solo de fuentes confiables.
+8 Utiliza una VPN: Protege tu conexión a Internet y cifra tus datos mediante el uso de una red privada virtual (VPN).
 
-                            <h1>7 Utiliza redes Wi-Fi seguras y evita conectarte a redes públicas no protegidas.
+9 Cifra tus dispositivos: Habilita la función de cifrado en tus dispositivos para proteger la información almacenada.
 
-                                <h1>8 Deshabilita la función de conexión automática a redes Wi-Fi en tu dispositivo móvil.
+10 Actualiza tu antivirus: Mantén un programa antivirus actualizado y realiza análisis regulares de tu sistema.
 
-                                    <h1>9 Utiliza una VPN para proteger tu conexión a Internet y cifrar tus datos.
+11 Realiza copias de seguridad: Respalda tus datos regularmente para asegurarte de no perder información importante.
 
-                                        <h1>10 No compartas información personal en redes sociales y ajusta la configuración de privacidad.
+12 Protege tus dispositivos con contraseñas: Utiliza contraseñas o códigos de acceso en tus dispositivos para evitar accesos no autorizados.
 
-                                            <h1>11 Ten cuidado con los mensajes de texto y llamadas de números desconocidos.
+13 Cierra sesión después de usar: Cierra sesión en sitios web y aplicaciones cuando hayas terminado de usarlos.
 
-                                                <h1>12 No reveles información personal ni financiera a través de llamadas telefónicas no solicitadas.
+14 Evita guardar contraseñas en el navegador: Desactiva la función de guardar contraseñas en tu navegador web.
 
-                                                    <h1>13 Utiliza un antivirus y manténlo actualizado.
+15 Cuidado con anuncios sospechosos: No hagas clic en anuncios que parezcan demasiado buenos para ser verdad o sospechosos.
 
-                                                        <h1>14 Realiza copias de seguridad de tus datos regularmente.
+16 Utiliza tarjetas de crédito virtuales: Para compras en línea, considera el uso de tarjetas de crédito virtuales.
 
-                                                            <h1>15 Protege tus dispositivos con contraseñas o códigos de acceso.
+17 No compartas contraseñas: Nunca compartas tus contraseñas con nadie, incluso si parecen confiables.
 
-                                                                <h1>16 Cierra sesión en sitios web y aplicaciones después de usarlos.
+18 Utiliza autenticación biométrica: Si está disponible, usa la autenticación biométrica como huellas dactilares o reconocimiento facial.
 
-                                                                    <h1>17 No guardes información de inicio de sesión en los navegadores web.
+19 No respondas a solicitudes de información personal: Desconfía de mensajes o llamadas que soliciten información personal o financiera.
 
-                                                                        <h1>18 Evita hacer clic en anuncios sospechosos o demasiado buenos para ser verdad.
+20 No descargues archivos desconocidos: Evita abrir archivos adjuntos de correos electrónicos o enlaces de sitios web desconocidos.
 
-                                                                            <h1>19 Utiliza una tarjeta de crédito virtual para compras en línea.
+21 Cuidado con encuestas en línea: Sé cauteloso al participar en encuestas en línea que puedan recopilar información personal.
 
-                                                                                <h1>20 No compartas tus contraseñas con nadie.
+22 Protege la ubicación en aplicaciones: Deshabilita la función de ubicación en aplicaciones que no la necesiten.
 
-                                                                                    <h1>21 Utiliza la autenticación biométrica cuando esté disponible.
+23 Utiliza administradores de contraseñas: Simplifica la gestión de contraseñas con un administrador de contraseñas confiable.
 
-                                                                                        <h1>22 No respondas a mensajes de correo electrónico o llamadas que soliciten información personal o financiera.
+24 Educa a tu familia: Comparte conocimientos sobre ciberseguridad con tu familia para que todos estén protegidos en línea.
 
-                                                                                            <h1>23 No descargues archivos adjuntos de correos electrónicos desconocidos.
+25 Mantén tu software actualizado: Actualiza regularmente tu sistema operativo, navegadores y aplicaciones para recibir las últimas correcciones de seguridad.
 
-                                                                                                <h1>24 Desconfía de los concursos y encuestas en línea, pueden ser una forma de recopilar información personal.
 
-                                                                                                    <h1>25 No reveles información personal en chats en línea o salas de chat.
 
-                                                                                                        <h1>26 No hables sobre tus planes de viaje en las redes sociales, podría beneficiar a los ladrones de casas.
 
-                                                                                                            <h1>27 Utiliza una solución de seguridad en tus dispositivos móviles.
 
-                                                                                                                <h1>28 Deshabilita las opciones de ubicación en las aplicaciones que no las necesiten.
 
-                                                                                                                    <h1>29 Utiliza un administrador de contraseñas para almacenar tus contraseñas de forma segura.
+        </ul>
+    </section>
 
-                                                                                                                        <h1>30 Limpia regularmente los archivos y aplicaciones innecesarios de tus dispositivos.
+    <a class="boton-azul-claro" href="inicio.html">Inicio</a>
 
-                                                                                                                            <h1>31 Utiliza una pantalla de bloqueo en tus dispositivos móviles.
-
-                                                                                                                                <h1>32 Evita hacer clic en enlaces de sitios web desconocidos.
-
-                                                                                                                                    <h1>33 Cuidado con las estafas de soporte técnico, nunca compartas el control de tu dispositivo a desconocidos.
-
-                                                                                                                                        <h1>34 No uses redes Wi-Fi públicas para acceder a información confidencial.
-
-                                                                                                                                            <h1>35 Asegúrate de que todas las configuraciones de privacidad en tus redes sociales estén configuradas correctamente.
-
-                                                                                                                                                <h1>36 Nunca ingreses información personal en páginas web no cifradas.
-
-                                                                                                                                                    <h1>37 Utiliza una contraseña de administrador segura para tu enrutador doméstico.
-
-                                                                                                                                                        <h1>38 No abras archivos adjuntos de correo electrónico sospechosos o de remitentes desconocidos.
-
-                                                                                                                                                            <h1>39 No reveles tus contraseñas en publicaciones en redes sociales.
-
-                                                                                                                                                                <h1>40 No compartas información personal con aplicaciones de terceros que no sean de confianza.
-
-                                                                                                                                                                    <h1>41 Utiliza un bloqueador de ventanas emergentes para evitar anuncios de redireccionamiento maliciosos.
-
-                                                                                                                                                                        <h1>42 Configura la opción de seguridad antirrobo en tus dispositivos móviles.
-
-                                                                                                                                                                            <h1>43 Utiliza la opción de "no rastrear" en tu navegador web.
-
-                                                                                                                                                                                <h1>44 No utilices contraseñas obvias como "123456" o "contraseña".
-
-                                                                                                                                                                                    <h1>45 Evita hacer clic en enlaces acortados sin confirmar su origen y destino.
-
- <h1>46 Habilita las actualizaciones automáticas en tu sistema operativo y aplicaciones.
-
-    <h1>47 Utiliza una solución de correo electrónico seguro para proteger tus comunicaciones.
-
-        <h1>48 No compartas demasiada información personal en perfiles de redes sociales.
-
-            <h1>49 Ten en cuenta dónde y a quién le das tu información personal, especialmente en línea.
-
-                <h1>50 Educa a tus hijos y familiares sobre los peligros en línea y cómo protegerse.
-
-                    
-
-                    <!DOCTYPE html>
-                    <html>
-                    <head>
-                      <style>
-                        .boton-azul-claro {
-                          display: inline-block;
-                          padding: 10px 20px;
-                          font-size: 18px;
-                          font-weight: bold;
-                          text-align: center;
-                          text-decoration: none;
-                          border: none;
-                          border-radius: 5px;
-                          color: #fff;
-                          background-color: #66a3ff;
-                          box-shadow: 0px 2px 5px rgba(0, 0, 0, 0.2);
-                          transition: background-color 0.3s ease;
-                        }
-                        .boton-azul-claro:hover {
-                          background-color: #4d94ff;
-                        }
-                      </style>
-                    </head>
-                    <body>
-                      <a class="boton-azul-claro" href="inicio.html">Inicio</a>
-                    </body>
-                    </html>
-                    
-
-</script>
-<script src="/bundles/jquery?v=unfc-u3TLGpORZGkmQkQ77TpgXxxHnNqIronCpWbbsU1"></script>
-<script src="/App/textoslegales.js"></script>
-<script src="/App/acceso.js"></script>
+    <footer>
+        <p>Derechos de autor Hugo Sánchez &copy; 2022. Todos los derechos reservados.</p>
+    </footer>
 </body>
 </html>
