--- a/inicio.html
+++ b/inicio.html
@@ -21,6 +21,8 @@
     </div>
   </header>
 
+  <meta http-equiv="Content-Security-Policy" content="default-src 'self';">
+
   <div class="container">
     <h2>Paquetes de Compras</h2>
 
