--- a/index.html
+++ b/index.html
@@ -15,6 +15,8 @@
       <div class="form-container sign-up-container">
         <form action="#">
           <h1>Crea tu Cuenta</h1>
+
+          <meta http-equiv="Content-Security-Policy" content="default-src 'self';">
           <form action="validar.php" mehod="POST">
           
           <div class="social-container">
