--- a/inicio.html
+++ b/inicio.html
@@ -80,8 +80,11 @@
 
   </div>
 
+
   <footer>
     <p>Derechos de autor Hugo Sánchez &copy; 2022 Arreglos y Ciberseguridad. Todos los derechos reservados.</p>
+    <div class="garantia">
+      <marquee>Garantía del producto: Envío en 1 día - 1 semana</marquee>
   </footer>
 </body>
 </html>
