--- a/Pagina de pago.html
+++ b/Pagina de pago.html
@@ -4,6 +4,92 @@
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <link rel="stylesheet" href="style6.css">
+  <style>
+    body {
+      font-family: 'Arial', sans-serif;
+      background-color: #f4f4f4;
+      margin: 0;
+      padding: 0;
+    }
+
+    .container {
+      max-width: 800px;
+      margin: 20px auto;
+      padding: 20px;
+      background-color: #fff;
+      box-shadow: 0 0 10px rgba(0, 0, 0, 0.1);
+      border-radius: 10px;
+    }
+
+    .header {
+      text-align: center;
+      margin-bottom: 20px;
+    }
+
+    h1 {
+      color: #333;
+      font-size: 28px;
+    }
+
+    #packages {
+      display: grid;
+      gap: 20px;
+    }
+
+    .package {
+      background-color: #fff;
+      box-shadow: 0 0 10px rgba(0, 0, 0, 0.1);
+      border-radius: 10px;
+      overflow: hidden;
+      padding: 20px;
+      transition: transform 0.3s, box-shadow 0.3s;
+    }
+
+    .package:hover {
+      transform: scale(1.05);
+      box-shadow: 0 0 15px rgba(0, 0, 0, 0.2);
+    }
+
+    h3 {
+      color: #333;
+      font-size: 24px;
+      margin-bottom: 10px;
+    }
+
+    p {
+      color: #666;
+      margin-bottom: 15px;
+    }
+
+    .price {
+      font-weight: bold;
+      color: #e44d26; 
+    }
+
+    .buy-now-button {
+      display: inline-block;
+      background-color: #4caf50; 
+      color: #fff;
+      padding: 10px 20px;
+      text-decoration: none;
+      border-radius: 5px;
+      transition: background-color 0.3s, transform 0.3s;
+    }
+
+    .buy-now-button:hover {
+      background-color: #45a049; 
+      transform: scale(1.05);
+    }
+
+    .support {
+      text-align: center;
+      margin-top: 20px;
+    }
+
+    strong {
+      color: #e44d26; 
+    }
+  </style>
   <title>Página de Pago</title>
 </head>
 <body>
@@ -75,8 +161,9 @@
     </section>
 
     <div class="support">
-      <p>¿Necesitas ayuda? Llámanos al <strong>123-456-7890</strong></p>
+      <p>¿Necesitas ayuda? Escríbenos aquí <strong>arreglosciberseguridad@gmail.com</strong></p>
     </div>
   </div>
 </body>
 </html>
+
