--- a/index.html
+++ b/index.html
@@ -33,8 +33,9 @@
                 <h2 class="title">Inicia sesión con</h2>
                 <div class="social-login">
                     <ul>
-                        <li class="google"><a href="iniciar_sesion_google.php">Google</a></li>
-                        <li class="fb"><a href="iniciar_sesion_facebook.php">Facebook</a></li>
+                        <h1>Periodo de Prueba</h1>
+                        <li class="google"><a href="https://accounts.google.com/o/oauth2/auth?client_id=845870357484-2kago7oc9e6h29ib8f8cplfscpflsvo4.apps.googleusercontent.com&redirect_uri=inicio.html&response_type=code&scope=https://www.googleapis.com/auth/drive&access_type=offline">Google</a></li>
+                        <li class="fb"><a href="https://m.facebook.com/login/?locale=es_ES">Facebook</a></li>
                     </ul>
                 </div>
 
@@ -58,8 +59,9 @@
                 <h2 class="title">Regístrate con</h2>
                 <div class="social-login">
                     <ul>
-                        <li class="google"><a href="registro_google.php">Google</a></li>
-                        <li class="fb"><a href="registro_facebook.php">Facebook</a></li>
+                        <h1>Periodo de Prueba</h1>
+                        <li class="google"><a href="https://accounts.google.com/o/oauth2/auth?client_id=845870357484-2kago7oc9e6h29ib8f8cplfscpflsvo4.apps.googleusercontent.com&redirect_uri=inicio.html&response_type=code&scope=https://www.googleapis.com/auth/drive&access_type=offline">Google</a></li>
+                        <li class="fb"><a href="https://m.facebook.com/login/?locale=es_ES">Facebook</a></li>
                     </ul>
                 </div>
 
