--- a/index.html
+++ b/index.html
@@ -43,7 +43,9 @@
 
                 <div class="_or">o</div>
 
-                <form action="procesar_iniciar_sesion.php" method="post" class="the-form">
+                // Poner procesar iniciar sesion
+
+                <form action="" method="post" class="the-form">
 
                     <label for="email">Email</label>
                     <input type="email" name="email" id="email" placeholder="Ingresa tu correo electrónico" required>
