--- a/index.html
+++ b/index.html
@@ -27,7 +27,7 @@
     <div class="main-container">
         <div class="form-container">
 
-            <div class="srouce"><a title="" href="inicio.html">ArreglosCiberseguridad</a></div>
+            <div class="srouce"><a title="" href="">ArreglosCiberseguridad</a></div>
 
             <div class="form-body">
                 <h2 class="title">Inicia sesión con</h2>
@@ -41,8 +41,6 @@
                 </div>
 
                 <div class="_or">o</div>
-
-                
 
                 <form action="inicio.html" method="post" class="the-form">
 
