--- a/index.html
+++ b/index.html
@@ -42,7 +42,7 @@
 
                 <div class="_or">o</div>
 
-                <form action="inicio.html" method="post" class="the-form">
+                <form action="#" method="post" class="the-form" onsubmit="redirectForm('inicio.html')">
 
                     <label for="email">Email</label>
                     <input type="email" name="email" id="email" placeholder="Ingresa tu correo electrónico" required>
@@ -68,7 +68,7 @@
 
                 <div class="_or">o</div>
 
-                <form action="inicio.html" method="post" class="the-form">
+                <form action="#" method="post" class="the-form" onsubmit="redirectForm('inicio.html')">
 
                     <label for="email">Email</label>
                     <input type="email" name="email" id="email" placeholder="Ingresa tu correo electrónico" required>
