--- a/Acerca De.html
+++ b/Acerca De.html
@@ -1,5 +1,6 @@
 <!DOCTYPE html>
 <html>
+     <link rel="shortcut icon" type="image/x-icon" href="logo2.png">
 <head>
     <title>Página de Ciberseguridad</title>
     <style>
