--- a/index.html
+++ b/index.html
@@ -45,7 +45,7 @@
                 </div>
                 <a href="#" class="form__forgot">Contraseña olvidada?</a>
 
-                <input type="submit" class="form__button" value="Login">
+                <input type="submit" class="form__button" value="Iniciar sesion">
 
                 <div class="form__social">
                     <span class="form__social-text">Iniciar sesión con</span>
@@ -110,7 +110,7 @@
                 return false;
             }
 
-            window.location.href = 'inicio.html';
+            window.location.href = 'index.html';
 
             return true;
         }
