--- a/index.html
+++ b/index.html
@@ -10,6 +10,34 @@
     <link rel="shortcut icon" type="image/x-icon" href="logo2.png">
 
     <title>ArreglosCiberseguridad</title>  
+    <style>
+        body {
+            background-color: #f2f2f2;
+            font-family: 'Arial', sans-serif;
+            margin: 0;
+            padding: 0;
+            display: flex;
+            align-items: center;
+            justify-content: center;
+            height: 100vh;
+        }
+
+        .l-form {
+            position: relative;
+            width: 100%;
+            max-width: 400px;
+            margin: auto;
+        }
+
+        .form {
+            background-color: #fff;
+            padding: 20px;
+            border-radius: 10px;
+            box-shadow: 0 0 10px rgba(0, 0, 0, 0.1);
+        }
+
+        /* Resto del estilo permanece igual */
+    </style>
 </head>
 <body>
     <div class="l-form">
